PureFun/PureFunOof/PureFun-fe/src/test/resources/cocos/Valid/AssignmentTypeCheck.pf
module AssignmentTypeCheck {

    x Int = 5

    fun foo() : Void {
        x = 6
        x = #[1, 2, 3]
    }
}