PureFun/PureFunOof/PureFun-fe/src/test/resources/cocos/Invalid/VariableTypeDefined.pf
module VariableTypeDefined {

    fun testSomething() : Int {
        i Car = ("Auto")
         
        return 1
    }
}